@@ -1,4 +1,4 @@
-.TH PCRE2PATTERN 3 "05 July 2017" "PCRE2 10.30"
+.TH PCRE2PATTERN 3 "29 July 2017" "PCRE2 10.30"
 .SH NAME
 PCRE2 - Perl-compatible regular expressions (revised API)
 .SH "PCRE2 REGULAR EXPRESSION DETAILS"
@@ -1388,9 +1388,10 @@ or immediately after a range. For example, [b-d-z] matches letters in the range
 b to d, a hyphen character, or z.
 .P
 Perl treats a hyphen as a literal if it appears before or after a POSIX class
-(see below) or a character type escape such as as \ed, but gives a warning in
-its warning mode, as this is most likely a user error. As PCRE2 has no facility
-for warning, an error is given in these cases.
+(see below) or before or after a character type escape such as as \ed or \eH.
+However, unless the hyphen is the last character in the class, Perl outputs a
+warning in its warning mode, as this is most likely a user error. As PCRE2 has
+no facility for warning, an error is given in these cases.
 .P
 It is not possible to have the literal character "]" as the end character of a
 range. A pattern such as [W-]46] is interpreted as a class of two characters
@@ -3498,6 +3499,6 @@ Cambridge, England.
 .rs
 .sp
 .nf
-Last updated: 05 July 2017
+Last updated: 29 July 2017
 Copyright (c) 1997-2017 University of Cambridge.
 .fi
